syntax = "proto3";
package yandex.cloud.priv.billing.v1alpha1;
option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/billing/v1alpha1;billing";

message GrantPolicy {
  string id = 1;
  int64 start_time = 2;
  int64 end_time = 3;
  int64 paid_start_time = 4;
  int64 paid_end_time = 5;
  int64 rate = 6;
  int64 aggregation_span = 7;
  int64 grant_duration = 8;
  int64 max_count = 9;
  int64 max_amount = 10;
  string name = 11;
  int64 created_at = 12;
}
