syntax = "proto3";

package yandex.cloud.priv.cdn.v1;

import "yandex/cloud/priv/validation.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/cdn/v1;cdn";

service SupportService {
    // GetGCoreResourceID maps cloud resource_id into GCore CDN provider's resource_id.
    rpc GetGCoreResourceID(GetGCoreResourceIDRequest) returns (GetGCoreResourceIDResponse);
}

message GetGCoreResourceIDRequest {
    string resource_id = 1 [(required) = true, (length) = "<=50"];
}

message GetGCoreResourceIDResponse {
    string cloud_id = 1;

    string folder_id = 2;
    string resource_id = 3;

    int64  gcore_resource_id = 4;
}
