syntax = "proto3";

package yandex.cloud.priv.monitoring.v3;

import "google/protobuf/timestamp.proto";
import "yandex/cloud/priv/monitoring/v3/shard_settings.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/monitoring/v3;monitoring";

// A Shard resource.
message Shard {
    enum Mode {
        MODE_UNSPECIFIED = 0;
    
        // Active.
        ACTIVE = 1;
    
        // Read-only.
        READ_ONLY = 2;
    
        // Write-only.
        WRITE_ONLY = 3;
    
        // Inactive.
        INACTIVE = 4;
    }

    // ID of the shard.
    string id = 1;

    // ID of the folder that the shard belongs on.
    string folder_id = 2;

    // Creation timestamp.
    google.protobuf.Timestamp created_at = 3;

    // Modification timestamp.
    google.protobuf.Timestamp modified_at = 4;

    // ID of the user who created the shard.
    string created_by = 5;

    // ID of the user who modified the shard.
    string modified_by = 6;

    // Description of the shard.
    string description = 7;

    // Resource labels as `key:value` pairs.
    map<string, string> labels = 8;

    // ID of related cluster.
    string cluster_id = 9;

    // ID of related service.
    string service_id = 10;

    // Label name of related cluster.
    string cluster_label_name = 11;

    // Label name of related service.
    string service_label_name = 12;

    // Shard quotas.
    ShardQuotas quotas = 13;

    // Shard settings.
    ShardSettings shard_settings = 14;

    // Shard mode.
    Mode mode = 15;

    // Metric name label.
    string metric_name_label = 16;
}

message ShardQuotas {
    // Max metrics per pushed or pulled document.
    int64 max_metrics_per_document = 1;

    // Max file metrics in shard.
    int64 max_stored_metrics = 2;

    // Max mem-only metrics in shard.
    int64 max_memonly_metrics = 3;

    // Max metric response size in MiB (for pull only).
    int64 max_response_size_mb = 4;
}
