syntax = "proto3";

package yandex.cloud.priv.resourcemanager.v1.console;

import "google/api/annotations.proto";
import "yandex/cloud/api/tools/options.proto";
import "yandex/cloud/priv/console/v1/resource_settings.proto";
import "yandex/cloud/priv/resourcemanager/v1/folder.proto";
import "yandex/cloud/priv/validation.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/resourcemanager/v1/console;resourcemanager_console";
option java_outer_classname = "PCFS";

service FolderService {
  rpc List (ListFoldersRequest) returns (ListFoldersResponse) {
    option (google.api.http) = { get: "/yrm/v1/console/folders" };
  }

  rpc GetAllowedPermissions (GetAllowedPermissionsRequest) returns (Permissions) {
    option (google.api.http) = { post: "/yrm/v1/console/folders/{folder_id}:getAllowedPermissions" body: "*" };
    option (yandex.cloud.api.tools.method).lint_skip.http_verb = true;
  }

  rpc GetSettings (yandex.cloud.priv.console.v1.GetResourceSettingsRequest) returns (yandex.cloud.priv.console.v1.ResourceSettingsResponse);

  rpc UpdateSettings (yandex.cloud.priv.console.v1.UpdateResourceSettingsRequest) returns (yandex.cloud.priv.console.v1.ResourceSettingsResponse);
}

message ListFoldersRequest {
  string cloud_id = 1 [(length) = "<=50"];
  int64 page_size = 2 [(value) = "0-1000"];
  string page_token = 3 [(length) = "<=100"];
  string filter = 4 [(length) = "<=1000"];
}

message ListFoldersResponse {
  repeated Folder folders = 1;
  string next_page_token = 2;
}

message GetAllowedPermissionsRequest {
  string folder_id = 1 [(length) = "<=50"];
  repeated string permissions = 2;
}

message Permissions {
  repeated string permissions = 1;
}
