syntax = "proto3";

package yandex.cloud.priv.support.v1;

import "google/api/annotations.proto";
import "yandex/cloud/api/operation.proto";
import "yandex/cloud/api/tools/options.proto";
import "yandex/cloud/priv/operation/operation.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/support/v1/console;support";

service ConsoleCallsService {
  rpc RequestCall (RequestCallRequest) returns (operation.Operation) {
    option (google.api.http) = {post: "/support/v1/console/calls"};
    option (yandex.cloud.api.operation) = {
      metadata: "RequestCallMetadata"
      response: "google.protobuf.Empty"
    };
    option (yandex.cloud.api.tools.method).lint_skip.http_query_parameters = true;
  }

}

message RequestCallMetadata {
  string request_id = 1;
}

message RequestCallRequest {
  string cloud_id = 1;
  string description = 2;
  string phone = 3;
}
